# devs_journal_improvement

./: .gitignore  README.adoc  README.html  pyproject.toml  ruff.toml
documentation/: journal.adoc
src/: algorithms.py  main.py  maze_generator.py
